--- a/Motorcycle.ipynb
+++ b/Motorcycle.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCnaseZabxSSJT+YM4mhNG",
+      "authorship_tag": "ABX9TyNL3OFT/6C5Nxie2Bn5pQ59",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -308,12 +308,12 @@
         "        corners.append(i)"
       ],
       "metadata": {
-        "id": "h6WsJTcGH3my",
-        "outputId": "dc1084f8-bebe-45d8-b7cf-a4ff0f029bd7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 290
-        }
+        },
+        "id": "h6WsJTcGH3my",
+        "outputId": "dc1084f8-bebe-45d8-b7cf-a4ff0f029bd7"
       },
       "execution_count": 43,
       "outputs": [
@@ -346,11 +346,11 @@
         "print(a,b,c)"
       ],
       "metadata": {
-        "id": "YWCmd141Upw-",
-        "outputId": "2dd1ff24-fa95-4fa6-aad6-349f61da895c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YWCmd141Upw-",
+        "outputId": "2dd1ff24-fa95-4fa6-aad6-349f61da895c"
       },
       "execution_count": 53,
       "outputs": [
@@ -369,11 +369,11 @@
         "temp_df['one'].shift(2)"
       ],
       "metadata": {
-        "id": "QMXsva0TU7Q-",
-        "outputId": "497955f3-e112-433e-bb14-4aa3ecb9f037",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QMXsva0TU7Q-",
+        "outputId": "497955f3-e112-433e-bb14-4aa3ecb9f037"
       },
       "execution_count": 63,
       "outputs": [
@@ -428,11 +428,11 @@
         "np.degrees(math.acos(np.dot(data['vector prev'][30], data['vector past'][30]) / (np.linalg.norm(data['vector prev'][30]) * np.linalg.norm(data['vector past'][30]))))"
       ],
       "metadata": {
-        "id": "fEs25UPoyLh2",
-        "outputId": "a599c7d9-567a-4fcd-9029-3d351dcac0ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fEs25UPoyLh2",
+        "outputId": "a599c7d9-567a-4fcd-9029-3d351dcac0ef"
       },
       "execution_count": 127,
       "outputs": [
@@ -451,25 +451,79 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in len(data):\n",
-        "  print(i)"
+        "np.degrees(math.acos(np.dot(data['vector prev'][30], data['vector past'][30]) / (np.linalg.norm(data['vector prev'][30]) * np.linalg.norm(data['vector past'][30]))))"
       ],
       "metadata": {
-        "id": "RI_fASdJ4gLB",
-        "outputId": "9d66f52f-629f-4394-a377-bcbe052f46a4",
+        "id": "ySyFsCDl5qLf",
+        "outputId": "9653e85a-8eef-45eb-d494-5d471f1e5569",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 131,
+      "execution_count": 147,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "4202\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "179.72609439156923"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 147
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['degrees'] = 0\n",
+        "\n",
+        "for i in range(len(data)):\n",
+        "  if np.isnan(data['vector prev'][i][0]) == False:\n",
+        "    data.iloc[i, data.columns.get_loc('degrees')] = np.degrees(math.acos(np.dot(data['vector prev'][i], data['vector past'][i]) / (np.linalg.norm(data['vector prev'][i]) * np.linalg.norm(data['vector past'][i]) +1e-20)))"
+      ],
+      "metadata": {
+        "id": "RI_fASdJ4gLB"
+      },
+      "execution_count": 154,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(len(data)):\n",
+        "  print(data.iloc[i, data.columns.get_loc('degrees')])"
+      ],
+      "metadata": {
+        "id": "1DhdUTay7Z4M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.degrees(math.acos(np.dot(data['vector prev'][30], data['vector past'][30]) / (np.linalg.norm(data['vector prev'][30]) * np.linalg.norm(data['vector past'][30])+1e-20)))"
+      ],
+      "metadata": {
+        "id": "Yr7PaWcr8Sjp",
+        "outputId": "f1b5e315-87b7-47b3-d0d9-300effd8a76b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "179.72608721047743"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 153
         }
       ]
     }
